<resources>
    <string name="app_name">WMM</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mbook_entry">MBook Entry</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="android_studio">Android Studio</string>
    <string name="check_measurement">Check Measurement</string>
    <string name="measurement_disputes">Measurement Disputes</string>
    <string name="payment_status">Payment Status</string>
    <string name="logout">Logout</string>
    <string name="work_statistics">Work Statistics</string>
    <string name="select_project">SELECT PROJECT</string>
    <string name="agreement_n_agm_123">AGREEMENT N : AGM/123</string>
    <string name="agency_name_contractor_reyu_construction">AGENCY NAME/CONTRACTOR : REYU CONSTRUCTION</string>
    <string name="location_hyderabad">Location : Hyderabad</string>
    <string name="select_date_18_01_2019">Select Date : 18-01-2019</string>
    <string name="item_name">ITEM NAME</string>
    <string name="units_cm">UNITS : CM</string>
    <string name="no">NO</string>
    <string name="length">LENGTH</string>
    <string name="breath">BREATH</string>
    <string name="depth">DEPTH</string>
    <string name="qty">QTY</string>
    <string name="photo">PHOTO</string>
    <string name="select_files">Select Files</string>
    <string name="save_and_draft">save and draft</string>
    <string name="final_submit">final submit</string>
    <string name="select_all">select All</string>
    <string name="edit">Edit</string>
    <string name="remarks">REMARKS</string>
    <string name="submit">submit</string>
    <string name="_001">001</string>
    <string name="_25000">25000</string>
    <string name="pending">PENDING</string>
    <string name="_002">002</string>
    <string name="_50000">50000</string>
    <string name="approved">APPROVED</string>
</resources>
